unpackaged/main/default/objects/Activity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
            <value>
                <fullName>Web Meeting</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Industry Event Attended</fullName>
            </value>
            <value>
                <fullName>Insight Content Created</fullName>
            </value>
            <value>
                <fullName>LinkedIn Invites (X10)</fullName>
            </value>
            <value>
                <fullName>Content Reshare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>