unpackaged/main/default/objects/Activity/fields/Annual_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Annual_Entitlement__c</fullName>
    <label>Annual Entitlement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>