unpackaged/main/default/objects/Activity/fields/Assigned_Division__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Division__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Division</label>
    <type>Text</type>
</CustomField>