unpackaged/main/default/objects/Activity/fields/AssignedRole__c.field-meta.xml
<CustomField>
    <fullName>AssignedRole__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Assigned Role</label>
    <type>Text</type>
</CustomField>