unpackaged/main/default/objects/Activity/fields/CoveredBy__c.field-meta.xml
<CustomField>
    <fullName>CoveredBy__c</fullName>
    <label>Covered by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alison Sutcliffe</fullName>
            </value>
            <value>
                <fullName>Donna Callan</fullName>
            </value>
            <value>
                <fullName>Kathryn Youdan</fullName>
            </value>
            <value>
                <fullName>Tereasa Wilkinson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>