unpackaged/main/default/objects/Activity/fields/Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_Completed__c</fullName>
    <label>Days Completed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>