unpackaged/main/default/objects/Activity/fields/Days_Predicted__c.field-meta.xml
<CustomField>
    <fullName>Days_Predicted__c</fullName>
    <label>Days Predicted</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>