unpackaged/main/default/objects/Activity/fields/DevStatusPick__c.field-meta.xml
<CustomField>
    <fullName>DevStatusPick__c</fullName>
    <label>Dev Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dev_Status</valueSetName>
    </valueSet>
</CustomField>