unpackaged/main/default/objects/Activity/fields/Existing_Secure_File_Transfer_Solution__c.field-meta.xml
<CustomField>
    <fullName>Existing_Secure_File_Transfer_Solution__c</fullName>
    <label>Existing Secure File Transfer Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>PLM Integrated</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Home Grown</fullName>
            </value>
            <value>
                <fullName>WeTransfer</fullName>
            </value>
            <value>
                <fullName>Files.com</fullName>
            </value>
            <value>
                <fullName>HIghtail</fullName>
            </value>
            <value>
                <fullName>Sharefile</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>TruExchange</fullName>
            </value>
            <value>
                <fullName>OFTP</fullName>
            </value>
            <value>
                <fullName>Other Cloud Based</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Galaxkey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>