unpackaged/main/default/objects/Activity/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>Total number of business hours the task is estimated to take complete, or took for completed tasks.</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>