unpackaged/main/default/objects/Activity/fields/IsLatestTask__c.field-meta.xml
<CustomField>
    <fullName>IsLatestTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest Task</label>
    <type>Checkbox</type>
</CustomField>