unpackaged/main/default/objects/Activity/fields/IsMajentaPLM__c.field-meta.xml
<CustomField>
    <fullName>IsMajentaPLM__c</fullName>
    <formula>CONTAINS(Owner:User.Email, 'majentaplm.com') || INCLUDES(Owner:User.Divisions__c,'PLM')</formula>
    <label>IsMajentaPLM</label>
    <type>Checkbox</type>
</CustomField>