unpackaged/main/default/objects/Activity/fields/IsMX_discussion__c.field-meta.xml
<CustomField>
    <fullName>IsMX_discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX discussion?</label>
    <type>Checkbox</type>
</CustomField>