unpackaged/main/default/objects/Activity/fields/IsResourceBooking__c.field-meta.xml
<CustomField>
    <fullName>IsResourceBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resource Booking</label>
    <type>Checkbox</type>
</CustomField>