unpackaged/main/default/objects/Activity/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName + " " + Owner:User.Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>