unpackaged/main/default/objects/Activity/fields/MX_comments__c.field-meta.xml
<CustomField>
    <fullName>MX_comments__c</fullName>
    <label>MX comments</label>
    <type>TextArea</type>
</CustomField>