unpackaged/main/default/objects/Activity/fields/Objective_Goal__c.field-meta.xml
<CustomField>
    <fullName>Objective_Goal__c</fullName>
    <label>Objective Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Better Reporting</fullName>
            </value>
            <value>
                <fullName>Create Future Forecasting</fullName>
            </value>
            <value>
                <fullName>Create HR Integration</fullName>
            </value>
            <value>
                <fullName>Create More Automation and Workflow</fullName>
            </value>
            <value>
                <fullName>Create Sage Integration</fullName>
            </value>
            <value>
                <fullName>Develop Team Skills</fullName>
            </value>
            <value>
                <fullName>Kaizen Improvement</fullName>
            </value>
            <value>
                <fullName>Reduce Spare Capacity</fullName>
            </value>
            <value>
                <fullName>Timely Management Accounts Reporting</fullName>
            </value>
            <value>
                <fullName>Succession Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>