unpackaged/main/default/objects/Activity/fields/ProductCategoryPick__c.field-meta.xml
<CustomField>
    <fullName>ProductCategoryPick__c</fullName>
    <defaultValue>"Not Selected"</defaultValue>
    <description>Product Category Picklist, requested by Simon Ordish (005289/0421)</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Enerjyhub</fullName>
            </value>
            <value>
                <fullName>Digital Construction</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>