unpackaged/main/default/objects/Activity/fields/ProjectTaskId__c.field-meta.xml
<CustomField>
    <fullName>ProjectTaskId__c</fullName>
    <externalId>true</externalId>
    <label>Project Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>