unpackaged/main/default/objects/Activity/fields/ResourceBooking__c.field-meta.xml
<CustomField>
    <fullName>ResourceBooking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Booking</label>
    <referenceTo>ResourceBooking__c</referenceTo>
    <relationshipLabel>Calendar Entries</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>