unpackaged/main/default/objects/Activity/fields/ResourceBookingId__c.field-meta.xml
<CustomField>
    <fullName>ResourceBookingId__c</fullName>
    <label>Resource Booking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>