unpackaged/main/default/objects/Activity/fields/ShowTimeAs__c.field-meta.xml
<CustomField>
    <fullName>ShowTimeAs__c</fullName>
    <label>Show Time As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Working Elsewhere</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>illness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>