unpackaged/main/default/objects/Activity/fields/SP_Account__c.field-meta.xml
<CustomField>
    <fullName>SP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Account</label>
    <referenceTo>Support_Product__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>