unpackaged/main/default/objects/Activity/fields/SP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SP_Account_Name__c</fullName>
    <formula>SP_Account__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Account Name</label>
    <type>Text</type>
</CustomField>