unpackaged/main/default/objects/Activity/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>