unpackaged/main/default/objects/Activity/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF( IsClosed, "Closed",
  IF(
    OR(
      ISPICKVAL( Status , "Waiting on someone else" ),
      ISPICKVAL( Status , "Deferred" )
    ),
    "Blocked", 
     IF( DATEVALUE(StartDateTime__c) &lt; TODAY(), "Late", "Open" )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>