unpackaged/main/default/objects/Activity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>