unpackaged/main/default/objects/Activity/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <label>Total Days</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>