unpackaged/main/default/objects/Activity/fields/TotalHours__c.field-meta.xml
<CustomField>
    <fullName>TotalHours__c</fullName>
    <formula>IF( Hours__c == 0, 0.5, Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>