unpackaged/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not There</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Longterm</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Pre Sales Demo</fullName>
            </value>
            <value>
                <fullName>Pre Sales Demo Preperation</fullName>
            </value>
            <value>
                <fullName>Internal Event</fullName>
            </value>
            <value>
                <fullName>Internal Event Preperation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Training Preperation</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>Partner Meetings</fullName>
            </value>
            <value>
                <fullName>Post Sales Support/Consultancy</fullName>
            </value>
            <value>
                <fullName>Administration/Reports/Salesforce.com</fullName>
            </value>
            <value>
                <fullName>Forecast Review</fullName>
            </value>
            <value>
                <fullName>Initial Meeting</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Close Meeting</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Technical Review Meeting</fullName>
            </value>
            <value>
                <fullName>Exploratory Meeting</fullName>
            </value>
            <value>
                <fullName>Thank You</fullName>
            </value>
            <value>
                <fullName>TAM Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>