unpackaged/main/default/objects/Activity/fields/WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>WeekNumber__c</fullName>
    <formula>MOD(FLOOR((DATEVALUE(StartDateTime__c) - DATEVALUE("2006-01-01" ))/7),52)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>