unpackaged/main/default/objects/Activity/listViews/My_Accounts_Department_Activities.listView-meta.xml
<ListView>
    <fullName>My_Accounts_Department_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts Department Activities</label>
</ListView>