unpackaged/main/default/objects/Activity/listViews/MyOpenTasks.listView-meta.xml
<ListView>
    <fullName>MyOpenTasks</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>SP_Account_Name__c</columns>
    <columns>Activity__c</columns>
    <columns>Hours__c</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <columns>StatusColour__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Open Tasks</label>
</ListView>