unpackaged/main/default/objects/Activity/listViews/MyTasks.listView-meta.xml
<ListView>
    <fullName>MyTasks</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>Activity__c</columns>
    <columns>Type__c</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017 12:00 AM</value>
    </filters>
    <label>My Tasks</label>
</ListView>